--- a/day_0/AUTHORS
+++ b/day_0/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Santiago Goyret <santiago.goyret@gmail.com>
-Martin Casamayou <martin.casamayou@holbertonschool.com>
+Martin Casamayou <martin@casamayou.net>
